# dependify

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: compatibility.yml
dependify/: __init__.py  _class_decorator.py  _conditional_result.py  _default_container.py  _default_registry.py  _dependency.py  _dependency_container.py  _dependency_injection_container.py  _dependency_registry.py  _is_class_var.py  _not_resolved.py  _resolver.py  context.py  dependency_registry.py
dependify/decorators/: __init__.py  _injectable.py  _wired.py
dependify/decorators/_inject/: __init__.py  _get_existing_annot.py  _inject.py
dependify/decorators/_injected/: __init__.py  _create_eager.py  _create_init.py  _create_lazy.py  _create_pydantic_wrap_validator.py  (+8 more)
dependify/dependencies/: __init__.py
src/: container.py  decorators.py  test.py
src/dependify/: __init__.py  container.py  context.py  decorators.py  dependency.py  dependency_registry.py
src/dependify.egg-info/: PKG-INFO  SOURCES.txt
test/: __init__.py  test_container.py  test_dependency.py  test_inject.py
test/unit/: test_class_var.py  test_container.py  test_context.py  test_context_isolation.py  test_decorator_injection.py  test_decorator_override.py  test_dependency.py  test_excluded.py  test_field_lazy.py  test_forward_references.py  test_generic.py  test_inject.py  test_injectable.py  test_injected.py  test_lazy.py  test_non_callable_dependency.py  test_optional_lazy.py  test_pydantic_wired.py  test_remove_dependency.py  test_resolve_all.py  test_wired.py
(+6 files in other folders)
