[project]
name = "dependify"
version = "3.0.2"
authors = [
  { name="Kenneth Ulloa", email="ulloakenth@gmail.com" },
]
description = "Dependency injection package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0.0"]

[project.urls]
Homepage = "https://github.com/KennethUlloa/dependify"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dependify*"]

[tool.poetry.dependencies]
pydantic = "^2.12.5"
